force-app/main/default/objects/EnergiaUnidades__c/EnergiaUnidades__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>EnergíaUnidades</label>
</CustomObject>