force-app/main/default/objects/EnergiaUnidades__c/fields/Abreviatura_unidad_consumo__c.field-meta.xml
<CustomField>
    <fullName>Abreviatura_unidad_consumo__c</fullName>
    <description>Abreviatura para la unidad de consumo empleada para mostrar en PDFs, etc</description>
    <label>Abreviatura unidad consumo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>