force-app/main/default/objects/EnergiaUnidades__c/fields/CO2__c.field-meta.xml
<CustomField>
    <fullName>CO2__c</fullName>
    <label>CO2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>