force-app/main/default/objects/EnergiaUnidades__c/fields/Codigo_tarifa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_tarifa__c</fullName>
    <label>Código tarifa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>