force-app/main/default/objects/EnergiaUnidades__c/fields/Energia__c.field-meta.xml
<CustomField>
    <fullName>Energia__c</fullName>
    <label>Energia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>