force-app/main/default/objects/EnergiaUnidades__c/fields/PCI__c.field-meta.xml
<CustomField>
    <fullName>PCI__c</fullName>
    <label>PCI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>