force-app/main/default/objects/EnergiaUnidades__c/fields/Unidad_CO2__c.field-meta.xml
<CustomField>
    <fullName>Unidad_CO2__c</fullName>
    <label>Unidad CO2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>