force-app/main/default/objects/EnergiaUnidades__c/fields/Unidad_PCI__c.field-meta.xml
<CustomField>
    <fullName>Unidad_PCI__c</fullName>
    <label>Unidad PCI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>