force-app/main/default/objects/EnergiaUnidades__c/fields/UnidadConsumo__c.field-meta.xml
<CustomField>
    <fullName>UnidadConsumo__c</fullName>
    <label>UnidadConsumo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>