force-app/main/default/objects/EnergiaUnidades__c/fields/UnidadPrecio__c.field-meta.xml
<CustomField>
    <fullName>UnidadPrecio__c</fullName>
    <label>UnidadPrecio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>