force-app/main/default/objects/EnergiaUnidades__c/listViews/Ver.listView-meta.xml
<ListView>
    <fullName>Ver</fullName>
    <columns>NAME</columns>
    <columns>Energia__c</columns>
    <columns>PCI__c</columns>
    <columns>Unidad_PCI__c</columns>
    <columns>CO2__c</columns>
    <columns>Unidad_CO2__c</columns>
    <columns>UnidadConsumo__c</columns>
    <columns>Abreviatura_unidad_consumo__c</columns>
    <columns>UnidadPrecio__c</columns>
    <columns>C__c</columns>
    <columns>Codigo_tarifa__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ver</label>
    <language>es</language>
</ListView>